logo attempt 2, background size

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <div id="initial">
             <h1>Equilibria</h1>
             <h2>A goverment system for the people.</h2>
-            <img id="logo" src="img/pots.jpg"/>
+            <img id="logo" src="img/White%20-%20png.png"/>
         </div>
         
         <div id="explanation">
