--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         
         <div id="initial">
             <h1>Equilibria</h1>
-            <h2>A goverment system for the people.</h2>
+            <h2>A goverment system for  people.</h2>
             <img id="logo" src="img/White%20-%20png.png"/>
         </div>
         
