--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
         </div>
         
         <div id="explanation">
+            <h3>What is Equilibrianism?</h3>
             <p>Equilibrianism is a non-monetary government system that focuses of producing goods for the benefit of humanity not for profit</p>
+            <button onclick="window.location.href = 'https://w3docs.com';">Learn More</button>
         </div>
         
     </body>  
