--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div id="explanation">
             <h3>What is Equilibrianism?</h3>
             <p>Equilibrianism is a non-monetary government system that focuses of producing goods for the benefit of humanity not for profit</p>
-            <button id="LearnMore" onclick="window.location.href = "'learnMore.html'">Learn More</button>
+            <button id="LearnMore" onclick="window.location.href = 'learnMore.html'">Learn More</button>
         </div>
         
     </body>  
