--- a/learnMore.html
+++ b/learnMore.html
@@ -15,13 +15,13 @@
             <div class="Ideology" id="Non-Monetary">
                 <h4>Non-monetary</h4>
                 <img class="Symbol" src="img/Ideologies/Non-Monetary.png">
-                <p class="IdeologyDescription">texttexttexttexttexttexttexttextttexttexttexttexttexttexttexttexttexttexttexttexttexttexttexttexttext</p>
+                <p class="IdeologyDescription">Equilibreism is a non-monetary system, meaning there is no primary currency, instead goods are provided in return for work.</p>
             </div>
             
             <div class="Ideology" id="Basic-Needs">
-                <h4>Non-monetary</h4>
+                <h4>Basic needs</h4>
                 <img class="Symbol" src="img/Ideologies/Basic%20Needs.png">
-                <p class="IdeologyDescription">texttexttexttexttexttexttexttexttexttexttexttexttexttexttexttexttexttexttexttexttexttexttexttexttexttexttexttext</p>
+                <p class="IdeologyDescription">Any person who works, no matter their jobs will have their basics needs provided for them</p>
             </div>
             
             <div class="Ideology" id="Meritism">
